# stratagem

./: .gitignore  PLAN.md  README.md  justfile  pyproject.toml
configs/topologies/: small.yaml
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/benchmark/: BenchmarkDashboard.tsx
frontend/src/components/charts/: AttackerEUChart.tsx  CoverageSideBySide.tsx  DefenderEUCompare.tsx
frontend/src/components/controls/: BaselineToggle.tsx  BenchmarkControls.tsx  BudgetSlider.tsx  ModeToggle.tsx  ParamControls.tsx  PlayControls.tsx  TopologySelector.tsx
frontend/src/components/graph/: GraphNode.tsx  NetworkGraph.tsx  useLayoutNodes.ts
frontend/src/components/layout/: AppShell.tsx  ControlPanel.tsx
frontend/src/components/panels/: ActionLog.tsx  MathTooltip.tsx  (+3 more)
frontend/src/state/: useGameStore.ts
src/stratagem/: __init__.py  cli.py
src/stratagem/agents/: __init__.py  attacker.py  context.py  defender.py  llm.py  stubs.py
src/stratagem/environment/: attack_surface.py  deception.py  network.py
src/stratagem/evaluation/: __init__.py  baselines.py  benchmark.py  dashboard.py  metrics.py
src/stratagem/game/: graph.py  solver.py  state.py
src/stratagem/web/: __init__.py  app.py  converters.py  game_runner.py  schemas.py
tests/: test_attack_surface.py  test_attacker_tools.py  test_baselines.py  test_benchmark.py  test_deception.py  test_defender_tools.py  test_game_state.py  test_graph.py  test_metrics.py  test_network.py  test_play_route.py  test_solver.py  test_stubs.py
(+9 files in other folders)
